adjustement on css (responsive side and filters mainly)

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </section>
 
       <!-- FILTERS SECTION-->
-      <section id="filters" class="d-flex row">
+      <section id="filters" class="d-flex">
         <!-- Ingredients filter -->
         <div id="ingredients" class="d-flex row option-wrapper">
           <div
@@ -44,7 +44,46 @@
             <input type="text" placeholder="Ingrédients" id="ingredient-search" />
             <span class="arrow"></span>
           </div>
-          <ul id="ingredients-options-list" class="filters-options-list hidden" role="listbox">
+          <ul id="ingredients-options-list" class="dropdown-content d-flex" role="listbox">
+            <li class="option" aria-selected="false" role="option">Dashi</li>
+            <li class="option" aria-selected="false" role="option">Nori</li>
+            <li class="option" aria-selected="false" role="option">tofu</li>
+            <li class="option" aria-selected="false" role="option">Dashi</li>
+            <li class="option" aria-selected="false" role="option">Nori</li>
+            <li class="option" aria-selected="false" role="option">tofu</li>
+            <li class="option" aria-selected="false" role="option">Dashi</li>
+            <li class="option" aria-selected="false" role="option">Nori</li>
+            <li class="option" aria-selected="false" role="option">tofu</li>
+            <li class="option" aria-selected="false" role="option">Dashi</li>
+            <li class="option" aria-selected="false" role="option">Nori</li>
+            <li class="option" aria-selected="false" role="option">tofu</li>
+            <li class="option" aria-selected="false" role="option">Dashi</li>
+            <li class="option" aria-selected="false" role="option">Nori</li>
+            <li class="option" aria-selected="false" role="option">tofu</li>
+            <li class="option" aria-selected="false" role="option">Dashi</li>
+            <li class="option" aria-selected="false" role="option">Nori</li>
+            <li class="option" aria-selected="false" role="option">tofu</li>
+            <li class="option" aria-selected="false" role="option">Dashi</li>
+            <li class="option" aria-selected="false" role="option">Nori</li>
+            <li class="option" aria-selected="false" role="option">tofu</li>
+            <li class="option" aria-selected="false" role="option">Dashi</li>
+            <li class="option" aria-selected="false" role="option">Nori</li>
+            <li class="option" aria-selected="false" role="option">tofu</li>
+            <li class="option" aria-selected="false" role="option">Dashi</li>
+            <li class="option" aria-selected="false" role="option">Nori</li>
+            <li class="option" aria-selected="false" role="option">tofu</li>
+            <li class="option" aria-selected="false" role="option">Dashi</li>
+            <li class="option" aria-selected="false" role="option">Nori</li>
+            <li class="option" aria-selected="false" role="option">tofu</li>
+            <li class="option" aria-selected="false" role="option">Dashi</li>
+            <li class="option" aria-selected="false" role="option">Nori</li>
+            <li class="option" aria-selected="false" role="option">tofu</li>
+            <li class="option" aria-selected="false" role="option">Dashi</li>
+            <li class="option" aria-selected="false" role="option">Nori</li>
+            <li class="option" aria-selected="false" role="option">tofu</li>
+            <li class="option" aria-selected="false" role="option">Dashi</li>
+            <li class="option" aria-selected="false" role="option">Nori</li>
+            <li class="option" aria-selected="false" role="option">tofu</li>
             <li class="option" aria-selected="false" role="option">Dashi</li>
             <li class="option" aria-selected="false" role="option">Nori</li>
             <li class="option" aria-selected="false" role="option">tofu</li>
@@ -63,7 +102,7 @@
             <input type="text" placeholder="Appareils" id="appliances-search" />
             <span class="arrow"></span>
           </div>
-          <ul id="appliances-options-list" class="filters-options-list hidden" role="listbox">
+          <ul id="appliances-options-list" class="dropdown-content" role="listbox">
             <li class="option" aria-selected="false" role="option">Mixeur</li>
             <li class="option" aria-selected="false" role="option">Casserole</li>
             <li class="option" aria-selected="false" role="option">Friteuse</li>
@@ -82,7 +121,7 @@
             <input type="text" placeholder="Ustensiles" id="ustensils-search" />
             <span class="arrow"></span>
           </div>
-          <ul id="ustensils-options-list" class="filters-options-list hidden" role="listbox">
+          <ul id="ustensils-options-list" class="dropdown-content hidden" role="listbox">
             <li class="option" aria-selected="false" role="option">Presse-citron</li>
             <li class="option" aria-selected="false" role="option">Couteau</li>
             <li class="option" aria-selected="false" role="option">Tamis</li>
@@ -91,7 +130,7 @@
       </section>
 
       <!-- RECIPES SECTION -->
-      <section id="recipes" class="d-flex row">
+      <section id="recipes" class="d-flex">
         <article class="recipe__card d-flex column">
           <figure></figure>
           <div class="recipe__description d-flex column">
