--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8" />
     <meta name="description" content="Rechercher en 1 seconde la recette qui vous correspond !" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/399e6dfa69.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/dist/css/home.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -13,105 +12,96 @@
   </head>
   <body>
     <!-- HEADER -->
-    <header class="d-flex row">
-      <a href="#" id="logo" aria-label="lien vers la page d'accueil des Petits Plats">
-        <img src="assets/img/logo.png" alt="logo les petits plats" />
+    <header class="container d-flex flex-row justify-content-center">
+      <a class="navbar-brand mx-auto" href="#" id="logo" aria-label="lien vers la page d'accueil des Petits Plats">
+        <img src="assets/img/logo.png" width="268" alt="logo les petits plats" />
       </a>
     </header>
     <!-- MAIN -->
-    <main>
-      <section class="top-search" role="banner" class="d-flex row">
+    <main class="container">
+      <section role="banner" class="row flex-row position-relative mb-3 justify-content-between align-items-center">
         <input
+          class="col btn btn-lg bg-light text-left text-truncate"
           type="search"
-          id="site-search"
+          id="main-search"
           placeholder="Rechercher un ingrédient, appareil, ustensiles ou une recette"
           aria-label="Search through site content"
         />
-        <button><i class="fas fa-search"></i></button>
+        <button class="col-1 position-absolute end-2 btn btn-lg bg-transparent text-dark"><i class="col-1 fas fa-search"></i></button>
       </section>
 
       <!-- FILTERS SECTION-->
-      <section id="filters" class="d-flex">
-        <!-- Ingredients filter -->
-        <div id="ingredients" class="option-wrapper">
-          <div
-            id="ingredients-filter-button"
-            class="filters-button d-flex row"
-            aria-controls="ingredients-options-list"
-            aria-haspopup="true"
-            aria-labelledby="ingredient-search"
-            role="searchbox"
+      <section id="sub-search" class="row gx-3 justify-content-between justify-content-lg-start align-items-center">
+        <!-- Ingredients Sub Search -->
+        <div id="sub-search__ingredients" class="col-12 col-lg-3 px-0 mb-3 dropdown d-flex justify-content-between align-items-center">
+          <button
+            class="col btn btn-lg btn-primary text-white text-left font-weight-bold d-flex justify-content-between align-items-center"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
           >
-            <span class="filter-name">Ingrédients</span>
-            <span class="arrow"></span>
-        </div>
-          <ul id="ingredients-options-list" class="dropdown-content d-flex" role="listbox">
-            <li class="option" aria-selected="false" role="option">Dashi</li>
-            <li class="option" aria-selected="false" role="option">Nori</li>
-            <li class="option" aria-selected="false" role="option">tofu</li>
-            <li class="option" aria-selected="false" role="option">Dashi</li>
-            <li class="option" aria-selected="false" role="option">Nori</li>
+            <strong>Ingrédients</strong><span class="arrow col-1 end-0"></span>
+          </button>
+          <ul id="ingredients-tag-list" class="sub-search__taglist dropdown-menu btn-primary text-white" role="listbox">
+            <li class="dropdown-item" aria-selected="false" role="option">Dashi</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Nori</li>
+            <li class="dropdown-item" aria-selected="false" role="option">tofu</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Dashi</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Nori</li>
           </ul>
         </div>
-        <!-- Devices filter -->
-        <div id="appliances" class="d-flex row option-wrapper">
-          <div
-            id="appliances-filter-button"
-            class="filters-button"
-            aria-controls="appliances-options-list"
-            aria-haspopup="true"
-            aria-labelledby="appliances-search"
-            role="searchbox"
+        <!-- Appliances Sub Search -->
+        <div id="sub-search__appliances" class="col-12 col-lg-3 px-0 mb-3 dropdown d-flex justify-content-between align-items-center">
+          <a
+            class="col btn btn-lg btn-success text-white text-left d-flex justify-content-between align-items-center"
+            href="#"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
           >
-            <span class="filter-name">Appareils</span>
-            <input type="text" placeholder="Recherche un appareil" id="appliances-search" class="hidden"/>
-            <span class="arrow"></span>
-          </div>
-          <ul id="appliances-options-list" class="dropdown-content" role="listbox">
-            <li class="option" aria-selected="false" role="option">Mixeur</li>
-            <li class="option" aria-selected="false" role="option">Casserole</li>
-            <li class="option" aria-selected="false" role="option">Friteuse</li>
+            <strong>Appareils</strong><span class="arrow col-1 end-0"></span>
+          </a>
+          <ul id="appliances-tag-list" class="sub-search__taglist dropdown-menu btn-primary text-white" role="listbox">
+            <li class="dropdown-item" aria-selected="false" role="option">Mixeur</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Four</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Blender</li>
           </ul>
         </div>
-        <!-- Ustensils filter -->
-        <div id="ustensils" class="d-flex row option-wrapper">
-          <div
-            id="ustensils-filter-button"
-            class="filters-button"
-            aria-controls="ustensils-options-list"
-            aria-haspopup="true"
-            aria-labelledby="ustensils-search"
-            role="searchbox"
+        <!-- Ustensils Sub Search -->
+        <div id="sub-search__ustensils" class="col-12 col-lg-3 px-0 mb-3 dropdown d-flex justify-content-between align-items-center">
+          <a
+            class="col btn btn-lg btn-secondary text-white text-left d-flex justify-content-between align-items-center"
+            href="#"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
           >
-            <span class="filter-name">Appareils</span>
-            <input type="text" placeholder="Recherche un ustensile" id="ustensils-search" class="hidden" />
-            <span class="arrow"></span>
-          </div>
-          <ul id="ustensils-options-list" class="dropdown-content hidden" role="listbox">
-            <li class="option" aria-selected="false" role="option">Presse-citron</li>
-            <li class="option" aria-selected="false" role="option">Couteau</li>
-            <li class="option" aria-selected="false" role="option">Tamis</li>
+            <strong>Ustensiles</strong><span class="arrow col-1 end-0"></span>
+          </a>
+          <ul id="ustensils-tag-list" class="sub-search__taglist dropdown-menu btn-primary text-white" role="listbox">
+            <li class="dropdown-item" aria-selected="false" role="option">Mixeur</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Four</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Blender</li>
           </ul>
         </div>
       </section>
 
       <!-- RECIPES SECTION -->
-      <section id="recipes" class="d-flex">
-        <article class="recipe__card d-flex column">
-          <figure></figure>
-          <div class="recipe__description d-flex column">
-            <div class="main-info d-flex row">
-              <h2>Shoyu ramen</h2>
-              <p class="time"><i class="far fa-clock"></i> 80 min</p>
+      <section id="recipes" class="row g-3 justify-content-between">
+        <article class="card col-12 col-md-6 col-lg-4 px-0">
+          <figure class="card-img-top px-0 mb-0"></figure>
+          <div class="card-body d-flex flex-column justify-content-start">
+            <div class="row d-flex justify-content-between">
+              <h2 class="card-title col-8">Shoyu ramen</h2>
+              <h2 class="col-4 text-right font-weight-bold"><i class="far fa-clock"></i> 80 min</h2>
             </div>
-            <div class="detailed-info d-flex row">
-              <ul class="ingredient-list">
+            <div class="row justify-content-between align-items-start">
+              <ul class="card-text col-6">
                 <li><strong>Poitrine de Porc :</strong> 500 g</li>
                 <li><strong>Sauce soja :</strong> 100 ml</li>
                 <li><strong>Mirin :</strong> 50 ml</li>
                 <li><strong>Saké :</strong>1 cs</li>
               </ul>
-              <p>
+              <p class="card-text col-6">
                 Préparer le dashi qui sera ajouté au bouillon. Dans un récipient avec couvercle, mélanger dans l’eau froide les shitaké et le kombu.
                 Laisser reposer au moins 4h, de préférence 12 à 24h. Dans une casserole, ajouter tous les ingrédients du taré et mélanger pour que
                 tout le katsuobushi soit imbibé de sauce soja.
@@ -119,21 +109,21 @@
             </div>
           </div>
         </article>
-        <article class="recipe__card d-flex column">
-          <figure></figure>
-          <div class="recipe__description d-flex column">
-            <div class="main-info d-flex row">
-              <h2>Shoyu ramen</h2>
-              <p class="time"><i class="far fa-clock"></i> 80 min</p>
+        <article class="card col-12 col-md-6 col-lg-4 px-0">
+          <figure class="card-img-top px-0 mb-0"></figure>
+          <div class="card-body d-flex flex-column justify-content-start">
+            <div class="row d-flex justify-content-between">
+              <h2 class="card-title col-8">Shoyu ramen</h2>
+              <h2 class="col-4 text-right font-weight-bold"><i class="far fa-clock"></i> 80 min</h2>
             </div>
-            <div class="detailed-info d-flex row">
-              <ul class="ingredient-list">
+            <div class="row justify-content-between align-items-start">
+              <ul class="card-text col-6">
                 <li><strong>Poitrine de Porc :</strong> 500 g</li>
                 <li><strong>Sauce soja :</strong> 100 ml</li>
                 <li><strong>Mirin :</strong> 50 ml</li>
                 <li><strong>Saké :</strong>1 cs</li>
               </ul>
-              <p>
+              <p class="card-text col-6">
                 Préparer le dashi qui sera ajouté au bouillon. Dans un récipient avec couvercle, mélanger dans l’eau froide les shitaké et le kombu.
                 Laisser reposer au moins 4h, de préférence 12 à 24h. Dans une casserole, ajouter tous les ingrédients du taré et mélanger pour que
                 tout le katsuobushi soit imbibé de sauce soja.
@@ -141,109 +131,21 @@
             </div>
           </div>
         </article>
-        <article class="recipe__card d-flex column">
-          <figure></figure>
-          <div class="recipe__description d-flex column">
-            <div class="main-info d-flex row">
-              <h2>Shoyu ramen</h2>
-              <p class="time"><i class="far fa-clock"></i> 80 min</p>
+        <article class="card col-12 col-md-6 col-lg-4 px-0">
+          <figure class="card-img-top px-0 mb-0"></figure>
+          <div class="card-body d-flex flex-column justify-content-start">
+            <div class="row d-flex justify-content-between">
+              <h2 class="card-title col-8">Shoyu ramen</h2>
+              <h2 class="col-4 text-right font-weight-bold"><i class="far fa-clock"></i> 80 min</h2>
             </div>
-            <div class="detailed-info d-flex row">
-              <ul class="ingredient-list">
+            <div class="row justify-content-between align-items-start">
+              <ul class="card-text col-6">
                 <li><strong>Poitrine de Porc :</strong> 500 g</li>
                 <li><strong>Sauce soja :</strong> 100 ml</li>
                 <li><strong>Mirin :</strong> 50 ml</li>
                 <li><strong>Saké :</strong>1 cs</li>
               </ul>
-              <p>
-                Préparer le dashi qui sera ajouté au bouillon. Dans un récipient avec couvercle, mélanger dans l’eau froide les shitaké et le kombu.
-                Laisser reposer au moins 4h, de préférence 12 à 24h. Dans une casserole, ajouter tous les ingrédients du taré et mélanger pour que
-                tout le katsuobushi soit imbibé de sauce soja.
-              </p>
-            </div>
-          </div>
-        </article>
-        <article class="recipe__card d-flex column">
-          <figure></figure>
-          <div class="recipe__description d-flex column">
-            <div class="main-info d-flex row">
-              <h2>Shoyu ramen</h2>
-              <p class="time"><i class="far fa-clock"></i> 80 min</p>
-            </div>
-            <div class="detailed-info d-flex row">
-              <ul class="ingredient-list">
-                <li><strong>Poitrine de Porc :</strong> 500 g</li>
-                <li><strong>Sauce soja :</strong> 100 ml</li>
-                <li><strong>Mirin :</strong> 50 ml</li>
-                <li><strong>Saké :</strong>1 cs</li>
-              </ul>
-              <p>
-                Préparer le dashi qui sera ajouté au bouillon. Dans un récipient avec couvercle, mélanger dans l’eau froide les shitaké et le kombu.
-                Laisser reposer au moins 4h, de préférence 12 à 24h. Dans une casserole, ajouter tous les ingrédients du taré et mélanger pour que
-                tout le katsuobushi soit imbibé de sauce soja.
-              </p>
-            </div>
-          </div>
-        </article>
-        <article class="recipe__card d-flex column">
-          <figure></figure>
-          <div class="recipe__description d-flex column">
-            <div class="main-info d-flex row">
-              <h2>Shoyu ramen</h2>
-              <p class="time"><i class="far fa-clock"></i> 80 min</p>
-            </div>
-            <div class="detailed-info d-flex row">
-              <ul class="ingredient-list">
-                <li><strong>Poitrine de Porc :</strong> 500 g</li>
-                <li><strong>Sauce soja :</strong> 100 ml</li>
-                <li><strong>Mirin :</strong> 50 ml</li>
-                <li><strong>Saké :</strong>1 cs</li>
-              </ul>
-              <p>
-                Préparer le dashi qui sera ajouté au bouillon. Dans un récipient avec couvercle, mélanger dans l’eau froide les shitaké et le kombu.
-                Laisser reposer au moins 4h, de préférence 12 à 24h. Dans une casserole, ajouter tous les ingrédients du taré et mélanger pour que
-                tout le katsuobushi soit imbibé de sauce soja.
-              </p>
-            </div>
-          </div>
-        </article>
-        <article class="recipe__card d-flex column">
-          <figure></figure>
-          <div class="recipe__description d-flex column">
-            <div class="main-info d-flex row">
-              <h2>Shoyu ramen</h2>
-              <p class="time"><i class="far fa-clock"></i> 80 min</p>
-            </div>
-            <div class="detailed-info d-flex row">
-              <ul class="ingredient-list">
-                <li><strong>Poitrine de Porc :</strong> 500 g</li>
-                <li><strong>Sauce soja :</strong> 100 ml</li>
-                <li><strong>Mirin :</strong> 50 ml</li>
-                <li><strong>Saké :</strong>1 cs</li>
-              </ul>
-              <p>
-                Préparer le dashi qui sera ajouté au bouillon. Dans un récipient avec couvercle, mélanger dans l’eau froide les shitaké et le kombu.
-                Laisser reposer au moins 4h, de préférence 12 à 24h. Dans une casserole, ajouter tous les ingrédients du taré et mélanger pour que
-                tout le katsuobushi soit imbibé de sauce soja.
-              </p>
-            </div>
-          </div>
-        </article>
-        <article class="recipe__card d-flex column">
-          <figure></figure>
-          <div class="recipe__description d-flex column">
-            <div class="main-info d-flex row">
-              <h2>Shoyu ramen</h2>
-              <p class="time"><i class="far fa-clock"></i> 80 min</p>
-            </div>
-            <div class="detailed-info d-flex row">
-              <ul class="ingredient-list">
-                <li><strong>Poitrine de Porc :</strong> 500 g</li>
-                <li><strong>Sauce soja :</strong> 100 ml</li>
-                <li><strong>Mirin :</strong> 50 ml</li>
-                <li><strong>Saké :</strong>1 cs</li>
-              </ul>
-              <p>
+              <p class="card-text col-6">
                 Préparer le dashi qui sera ajouté au bouillon. Dans un récipient avec couvercle, mélanger dans l’eau froide les shitaké et le kombu.
                 Laisser reposer au moins 4h, de préférence 12 à 24h. Dans une casserole, ajouter tous les ingrédients du taré et mélanger pour que
                 tout le katsuobushi soit imbibé de sauce soja.
@@ -254,9 +156,5 @@
       </section>
     </main>
     <script src="assets/dist/js/home.js"></script>
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   </body>
 </html>
