test for gutters in bootstrap

--- a/index.html
+++ b/index.html
@@ -29,9 +29,12 @@
         />
         <button class="col-1 position-absolute end-2 btn btn-lg bg-transparent text-dark"><i class="col-1 fas fa-search"></i></button>
       </section>
+      <!-- TAGS SECTION -->
+      <section id="tags-container" class="row gx-3 justify-content-lg-start align-items-center">
 
+      </section>
       <!-- FILTERS SECTION-->
-      <section id="sub-search" class="row gx-3 justify-content-between justify-content-lg-start align-items-center">
+      <section id="sub-search" class="row gy-3 justify-content-between justify-content-lg-start align-items-center">
         <!-- Ingredients Sub Search -->
         <div id="sub-search__ingredients" class="col-12 col-lg-3 px-0 mb-3 dropdown d-flex justify-content-between align-items-center">
           <button
@@ -86,13 +89,13 @@
       </section>
 
       <!-- RECIPES SECTION -->
-      <section id="recipes" class="row g-3 justify-content-between">
+      <section id="recipes" class="row gy-3 justify-content-between">
         <article class="card col-12 col-md-6 col-lg-4 px-0">
           <figure class="card-img-top px-0 mb-0"></figure>
           <div class="card-body d-flex flex-column justify-content-start">
             <div class="row d-flex justify-content-between">
               <h2 class="card-title col-8">Shoyu ramen</h2>
-              <h2 class="col-4 text-right font-weight-bold"><i class="far fa-clock"></i> 80 min</h2>
+              <h3 class="col text-right font-weight-italic"><i class="far fa-clock"></i> 80 min</h3>
             </div>
             <div class="row justify-content-between align-items-start">
               <ul class="card-text col-6">
